--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,21 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <div class="navbar navbar-default">
+    <div class="container">
+      <div class="navbar-header">
+        <%= link_to "Transporent", root_path, class: "navbar-brand" %>
+      </div>
+      <ul class="nav navbar-nav">
+        <Li><%= link_to "sign up", new_user_registration_path %></li>
+          <% if user_signed_in? %>
+        <Li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
+          <% else %>
+            <Li><%= link_to "Sign in", new_user_session_path %></li>
+          <% end %>
+      </ul>
+    </div>
+  </div>
 
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
