--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+
   <div class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
@@ -20,13 +21,17 @@
             <Li><%= link_to "Sign in", new_user_session_path %></li>
           <% end %>
       </ul>
+      <Li class="nav navbar-nav navbar-right"><%= link_to "Verhuren?", new_ad_path %></Li>
     </div>
   </div>
 
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
+  <div class="container">
+    <p class="notice alert-success" role="alert"><%= notice %></p>
+    <p class="alert" role="alert"><%= alert %></p>
+  </div>
 
+<div class="container">
   <%= yield %>
-
+</div>
 </body>
 </html>
