--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -16,7 +16,9 @@
   <h3>Comments:</h3>
 <%= link_to "back", root_path %>
   <% if user_signed_in? %>
+  <% if @ad.user_id == current_user.id %>
     <h3>reply to Message:</h3>
     <%= link_to "edit", edit_ad_path(@ad) %>
     <%= link_to "delete", ad_path(@ad), method: :delete, data: { confirm: "Weet je het zeker?"} %>
+  <% end %>
   <% end %>
