Huurpagina update & filter toegevoegd

--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -1,3 +1,89 @@
+<div class="panel panel-default">
+    <div class="panel-body">
+        <form class="form-inline" name="input" method="get" action="#" id="filter-tables">
+        	<div class="row">
+        		<div class="col-lg-4">
+                    <div class="panel panel-default">
+                        <div class="panel-body">
+                    		<h4 class="muted">Date</h4>
+                            <div class="radio">
+                              <label><input type="radio" name="optradio"> All Dates</label>
+                            </div>
+                            <p>
+                            </p><div class="radio">
+                              <label><input type="radio" name="optradio"> Especific Date</label>
+                            </div>
+                    		<p></p>
+                            <div class="input-daterange input-group" id="datepicker">
+                                <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                                <input type="text" class="input-sm form-control" name="start_date">
+                                <span class="input-group-addon"> - </span>
+                                <input type="text" class="input-sm form-control" name="end_date">
+                                <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            	<div class="col-lg-4">
+                    <div class="panel panel-default">
+                        <div class="panel-body">
+                    		<h4 class="muted">Persons</h4>
+                            <div class="radio">
+                              <label><input type="radio" name="optradio"> All Persons</label>
+                            </div>
+                            <p>
+                            </p><div class="radio">
+                              <label><input type="radio" name="optradio"> Especific Persons</label>
+                            </div>
+                    		<p></p>
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    <select class="input-sm form-control">
+                                      <option>Person Name 1</option>
+                                      <option>Person Name 2</option>
+                                      <option>Person Name 3</option>
+                                      <option>Person Name 4</option>
+                                      <option>Person Name 5</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="panel panel-default">
+                        <div class="panel-body">
+                        	<h4 class="muted">Files Types</h4>
+                            <div class="radio">
+                              <label><input type="radio" name="optradio"> All Files</label>
+                            </div>
+                            <p>
+                            </p><div class="radio">
+                              <label><input type="radio" name="optradio"> Especific Files</label>
+                            </div>
+                    		<p></p>
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    <select class="input-sm form-control">
+                                      <option></option>
+                                      <option>File Name 2</option>
+                                      <option>File Name 3</option>
+                                      <option>File Name 4</option>
+                                      <option>File Name 5</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        	</div>
+            <button type="submit" class="btn btn-default">Search</button>
+            </form>
+    </div>
+</div>
+
     <% @ads.each do |ad| %>
       <div class="thumbnail">
         <h2><%= link_to ad.title, ad_path(ad) %></h2>
