--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -1,5 +1,7 @@
-<%= simple_form_for @ad do |f| %>
-  <%= f.input :title, label: "Naam vervoer" %>
+<%= simple_form_for @ad, html: { multipart: true } do |f| %>
+  <%= f.input :title %>
+  <%= f.label :image %>
+  <%= f.file_field :image %>
   <%= f.input :categorie %>
   <%= f.input :description %>
   <%= f.input :price %>
