--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -1,20 +1,87 @@
+<div class="container">
+<div class="stepwizard">
+    <div class="stepwizard-row setup-panel">
+        <div class="stepwizard-step">
+            <a href="#step-1" type="button" class="btn btn-primary btn-circle">1</a>
+            <p>Step 1</p>
+        </div>
+        <div class="stepwizard-step">
+            <a href="#step-2" type="button" class="btn btn-default btn-circle" disabled="disabled">2</a>
+            <p>Step 2</p>
+        </div>
+        <div class="stepwizard-step">
+            <a href="#step-3" type="button" class="btn btn-default btn-circle" disabled="disabled">3</a>
+            <p>Step 3</p>
+        </div>
+         <div class="stepwizard-step">
+            <a href="#step-4" type="button" class="btn btn-default btn-circle" disabled="disabled">4</a>
+            <p>Step 4</p>
+        </div>
+    </div>
+</div>
 <%= simple_form_for @ad, html: { multipart: true } do |f| %>
-  <%= f.label :categorie %>
-  <%= f.select :categorie, ['Aanhanger', 'Auto'] %>
-  <%= f.input :title %>
-  <%= f.label :image %>
-  <%= f.file_field :image %>
-  <%= f.input :description %>
-  <%= f.input :price %>
-  <%= f.input :brand %>
-  <%= f.input :license %>
-  <%= f.input :plug %>
-  <%= f.input :size %>
-  <%= f.input :capacity %>
-  <%= f.input :restrictions %>
-  <%= f.input :transmission %>
-  <%= f.input :year %>
-  <%= f.input :engine %>
-  <%= f.input :fuel %>
-  <%= f.button :submit %>
+<form role="form">
+    <div class="row setup-content" id="step-1">
+        <div class="col-xs-12">
+            <div class="col-md-12">
+                <h3> Step 1</h3>
+                <div class="form-group">
+                  <%= f.label :categorie %>
+                  <%= f.select :categorie, ['Aanhanger', 'Auto'] %>
+                </div>
+                <div class="form-group">
+                    <%= f.input :title %>
+                </div>
+                <button class="btn btn-primary nextBtn btn-lg pull-right" type="button" >Next</button>
+            </div>
+        </div>
+    </div>
+    <div class="row setup-content" id="step-2">
+        <div class="col-xs-12">
+            <div class="col-md-12">
+                <h3> Step 2</h3>
+                <div class="form-group">
+                    <%= f.input :description %>
+                </div>
+                <div class="form-group">
+                  <%= f.input :price %>
+                  <%= f.input :brand %>
+                  <%= f.input :license %>
+                  <%= f.input :plug %>
+                  <%= f.input :size %>
+                  <%= f.input :capacity %>
+                  <%= f.input :restrictions %>
+                  <%= f.input :transmission %>
+                  <%= f.input :year %>
+                  <%= f.input :engine %>
+                  <%= f.input :fuel %>
+                </div>
+                <button class="btn btn-default prevBtn btn-lg pull-left" type="button" >Prev</button>
+                <button class="btn btn-primary nextBtn btn-lg pull-right" type="button" >Next</button>
+            </div>
+        </div>
+    </div>
+    <div class="row setup-content" id="step-3">
+        <div class="col-xs-12">
+            <div class="col-md-12">
+                <h3> Step 3</h3>
+                <div class="form-group">
+                    <%= f.label :image %>
+                    <%= f.file_field :image %>
+                </div>
+                <button class="btn btn-default prevBtn btn-lg pull-left" type="button" >Prev</button>
+                <button class="btn btn-primary nextBtn btn-lg pull-right" type="button" >Next</button>
+            </div>
+        </div>
+    </div>
+    <div class="row setup-content" id="step-4">
+        <div class="col-xs-12">
+            <div class="col-md-12">
+                <h3> Step 4 advertentie voltooien!</h3>
+                <button class="btn btn-default prevBtn btn-lg pull-left" type="button" >Prev</button>
+                  <%= f.button :submit, :class => "btn btn-success btn-lg pull-right" %>
+        </div>
+    </div>
+</form>
 <% end %>
+</div>
