--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -1,4 +1,3 @@
-
 <div class="row">
   <div class="col-md-4">
     <h2><%= link_to @ad.user.first_name, user_path(@ad.user) %></h2>
@@ -78,7 +77,11 @@
     </table>
 
 
-    <h3>Reviews:</h3>
+    <h2>Beoordeling</h2>
+    <div class="average-review-rating" data-score=<%= @average_review %>> gebaseerd op <%=@ad.reviews.count%> beoordelingen </div>
+
+    <div><%= link_to "Geef jouw beoordeling over", new_ad_review_path(@ad) %>
+    <%= render @ad.reviews %></div>
 
   <%= link_to "back", root_path %>
 
@@ -89,3 +92,23 @@
       <%= link_to "delete", ad_path(@ad), method: :delete, data: { confirm: "Weet je het zeker?"} %>
   <% end %>
   <% end %>
+
+<script>
+  $('.review-rating').raty({
+    readOnly: true,
+    score: function(){
+      return $(this).attr('data-score');
+    },
+    path: '/assets/'
+  })
+</script>
+
+<script>
+  $('.average-review-rating').raty({
+    readOnly: true,
+    path: '/assets/',
+    score: function() {
+      return $(this).attr('data-score')
+    }
+  })
+</script>
