--- a/app/assets/stylesheets/ads.scss
+++ b/app/assets/stylesheets/ads.scss
@@ -51,3 +51,17 @@ body{
   line-height: 1.428571429;
   border-radius: 15px;
 }
+
+.review-section {
+  border:1px solid #ddd;
+  padding: 15px;
+}
+
+.single-review {
+  width: 100%;
+  padding: 15px;
+  background-color: #eaeaea;
+  margin-bottom: 15px;
+  margin-top: 15px;
+
+}
