--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -24,13 +24,13 @@
     <div class="row setup-content" id="step-1">
         <div class="col-xs-12">
             <div class="col-md-12">
-                <h3> Step 1</h3>
+                <h3>Stap 1</h3>
                 <div class="form-group">
-                  <%= f.label :categorie %>
+                  <%= f.label :Categorie %>
                   <%= f.select :categorie, ['Aanhanger', 'Auto'] %>
                 </div>
                 <div class="form-group">
-                    <%= f.input :title %>
+                    <%= f.input :title, placeholder:"Bijvoorbeeld: Mercedes Sprinter"%>
                 </div>
                 <button class="btn btn-primary nextBtn btn-lg pull-right" type="button" >Next</button>
             </div>
@@ -41,7 +41,7 @@
             <div class="col-md-12">
                 <h3> Step 2</h3>
                 <div class="form-group">
-                    <%= f.input :description %>
+                    <%= f.input :description, placeholder:"Bijvoorbeeld: Net onderhouden, nieuwe banden en rijd prettig" %>
                 </div>
                 <div class="form-group">
                   <%= f.input :price %>
@@ -51,7 +51,8 @@
                   <%= f.input :size %>
                   <%= f.input :capacity %>
                   <%= f.input :restrictions %>
-                  <%= f.input :transmission %>
+                  <%= f.label :transmissie %>
+                  <%= f.select :transmission, ['handgeschakeld', 'automaat', 'zelf duwen'] %>
                   <%= f.input :year %>
                   <%= f.input :engine %>
                   <%= f.input :fuel %>
