--- a/app/assets/stylesheets/ads.scss
+++ b/app/assets/stylesheets/ads.scss
@@ -59,9 +59,45 @@ body{
 
 .single-review {
   width: 100%;
-  padding: 15px;
-  background-color: #eaeaea;
-  margin-bottom: 15px;
-  margin-top: 15px;
+      padding: 15px;
+      background-color: #f9f9f9;
+      margin-bottom: 15px;
+      border: 1px solid #eaeaea;
+      margin-top: 15px;
+}
 
+.edit-delete-section {
+  padding: 15px;
+  margin-bottom: 15px;
+    border: 1px solid #eaeaea;
+}
+
+.btn-rent {
+  padding: 10px;
+  border:1px solid #eaeaea;
+  background-color: white;
+  float:right;
+  list-style: none;
+  margin-top: 5px;
+  margin-right: 5px;
+}
+
+.ads {
+  width: 100%;
+}
+
+.ad {
+  border: 1px solid #eaeaea;
+  padding: 10px;
+  width: 30%;
+  float: left;
+  margin-right: 7px;
+}
+.header  {
+margin-top: -74px;
+padding: 20px;
+color:white;
+width: 100%;
+height: 363px;
+background-image: url("aanhangwagen-huren-van-buren.jpeg");
 }
