--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -1,21 +1,16 @@
-<div class="container">
 <div class="stepwizard">
     <div class="stepwizard-row setup-panel">
         <div class="stepwizard-step">
-            <a href="#step-1" type="button" class="btn btn-primary btn-circle">1</a>
-            <p>Step 1</p>
+            <a href="#step-1" type="button" class="btn btn-primary btn-circle"> 1</a>
         </div>
         <div class="stepwizard-step">
-            <a href="#step-2" type="button" class="btn btn-default btn-circle" disabled="disabled">2</a>
-            <p>Step 2</p>
+            <a href="#step-2" type="button" class="btn btn-default btn-circle" disabled="disabled"> 2</a>
         </div>
         <div class="stepwizard-step">
-            <a href="#step-3" type="button" class="btn btn-default btn-circle" disabled="disabled">3</a>
-            <p>Step 3</p>
+            <a href="#step-3" type="button" class="btn btn-default btn-circle" disabled="disabled"> 3</a>
         </div>
          <div class="stepwizard-step">
-            <a href="#step-4" type="button" class="btn btn-default btn-circle" disabled="disabled">4</a>
-            <p>Step 4</p>
+            <a href="#step-4" type="button" class="btn btn-default btn-circle" disabled="disabled"> 4</a>
         </div>
     </div>
 </div>
@@ -24,41 +19,40 @@
     <div class="row setup-content" id="step-1">
         <div class="col-xs-12">
             <div class="col-md-12">
-                <h3>Stap 1</h3>
                 <div class="form-group">
-                  <%= f.label :Categorie %>
+                  <%= f.label :Categorie, label: 'Kies een categorie' %>
                   <%= f.select :categorie, ['Aanhanger', 'Auto'] %>
                 </div>
                 <div class="form-group">
-                    <%= f.input :title, placeholder:"Bijvoorbeeld: Mercedes Sprinter"%>
+                    <%= f.input :title, label: 'Naam van je vervoersmidel'%>
                 </div>
-                <button class="btn btn-primary nextBtn btn-lg pull-right" type="button" >Next</button>
+                <button class="btn btn-primary nextBtn btn-lg pull-right" type="button" >Volgende</button>
             </div>
         </div>
     </div>
     <div class="row setup-content" id="step-2">
         <div class="col-xs-12">
             <div class="col-md-12">
-                <h3> Step 2</h3>
                 <div class="form-group">
-                    <%= f.input :description, placeholder:"Bijvoorbeeld: Net onderhouden, nieuwe banden en rijd prettig" %>
+                    <%= f.input :description, placeholder:"Bijvoorbeeld: Net onderhouden, nieuwe banden en rijd prettig", label: 'Beschrijving over jouw vervoersmidel' %>
                 </div>
                 <div class="form-group">
-                  <%= f.input :price %>
-                  <%= f.input :brand %>
-                  <%= f.input :license %>
-                  <%= f.input :plug %>
-                  <%= f.input :size %>
-                  <%= f.input :capacity %>
+                  <%= f.input :price, label: 'Prijs per dag' %>
+                  <%= f.input :brand, label: 'Merk'%>
+                  <%= f.input :license, label: 'Benodigd rijbewijs' %>
+                  <%= f.label :plug, label: 'Gestekkerd' %>
+                  <%= f.select :plug,['Ja', 'Nee'] %><p></p>
+                  <%= f.input :size, label: 'Afmetingen', placeholder: 'hoogte x breedte x lengte' %>
+                  <%= f.input :capacity, label: 'Laadvermogen' %>
                   <%= f.input :restrictions %>
                   <%= f.label :transmissie %>
-                  <%= f.select :transmission, ['handgeschakeld', 'automaat', 'zelf duwen'] %>
-                  <%= f.input :year %>
-                  <%= f.input :engine %>
-                  <%= f.input :fuel %>
+                  <%= f.select :transmission, ['handgeschakeld', 'automaat'] %><p></p>
+                  <%= f.input :year, label: 'Bouwjaar' %>
+                  <%= f.input :engine, label: 'Motor' %>
+                  <%= f.input :fuel, label: 'Brandstof' %>
                 </div>
-                <button class="btn btn-default prevBtn btn-lg pull-left" type="button" >Prev</button>
-                <button class="btn btn-primary nextBtn btn-lg pull-right" type="button" >Next</button>
+                <button class="btn btn-default prevBtn btn-lg pull-left" type="button" >Vorige</button>
+                <button class="btn btn-primary nextBtn btn-lg pull-right" type="button" >Volgende</button>
             </div>
         </div>
     </div>
@@ -70,8 +64,8 @@
                     <%= f.label :image %>
                     <%= f.file_field :image %>
                 </div>
-                <button class="btn btn-default prevBtn btn-lg pull-left" type="button" >Prev</button>
-                <button class="btn btn-primary nextBtn btn-lg pull-right" type="button" >Next</button>
+                <button class="btn btn-default prevBtn btn-lg pull-left" type="button" >Vorige</button>
+                <button class="btn btn-primary nextBtn btn-lg pull-right" type="button" >Volgende</button>
             </div>
         </div>
     </div>
@@ -85,4 +79,3 @@
     </div>
 </form>
 <% end %>
-</div>
