--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,8 +26,54 @@
 
     <p class="notice alert-success" role="alert"><%= notice %></p>
     <p class="alert" role="alert"><%= alert %></p>
-    
+
     <%= yield %>
   </div>
+  <footer class="footer">
+      <div class="container">
+
+        <div class="col-xs-6 col-sm-3">
+          <ul>
+            <li><h4>Over Transporent</h4></li>
+            <li>Veel gestelde vragen</li>
+            <li>Hoe werkt het?</li>
+            <li>Over ons</li>
+            <li>Blog</li>
+          </ul>
+        </div>
+
+        <div class="col-xs-6 col-sm-3">
+          <ul>
+            <li><h4>Voorwaarden</h4></li>
+            <li>Verzekering</li>
+            <li>Privacy policy</li>
+            <li>Gebruikersvoorwaarden</li>
+            <li>Cookie voorwaarden</li>
+          </ul>
+        </div>
+
+        <div class="col-xs-6 col-sm-3">
+          <ul>
+            <li><h4>Plaatsen</h4></li>
+            <li>Leeuwarden</li>
+            <li>Amsterdam</li>
+            <li>Groningen</li>
+            <li>Utrecht</li>
+            <li>Den Haag</li>
+            <li>Eindhoven</li>
+          </ul>
+        </div>
+
+        <div class="col-xs-6 col-sm-3">
+          <ul>
+            <li><h4>Vervoersmiddelen</h4></li>
+            <li>Aanhangwagen huren</li>
+            <li>Bus huren</li>
+            <li>Trailer huren</li>
+          </ul>
+        </div>
+      </div><div class="container">
+      <hr></div>
+    </footer>
 </body>
 </html>
