--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,4 +16,14 @@
  @import "bootstrap-sprockets";
  @import "bootstrap";
 
- 
+ .footer {
+    background-color: #cccccc;
+    margin-top: 20px;
+    height: auto;
+    padding: 15px;
+    color:white;
+}
+
+.footer ul li {
+  list-style: none;
+}
