ransack added search for location and catogorie done

--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -50,6 +50,7 @@
                   <%= f.input :year, label: 'Bouwjaar' %>
                   <%= f.input :engine, label: 'Motor' %>
                   <%= f.input :fuel, label: 'Brandstof' %>
+                  <%= f.input :location %>
                 </div>
                 <button class="btn btn-default prevBtn btn-lg pull-left" type="button" >Vorige</button>
                 <button class="btn btn-primary nextBtn btn-lg pull-right" type="button" >Volgende</button>
