--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -77,6 +77,7 @@
                 <button class="btn btn-default prevBtn btn-lg pull-left" type="button" >Prev</button>
                   <%= f.button :submit, :class => "btn btn-success btn-lg pull-right" %>
         </div>
+      </div>
     </div>
 </form>
 <% end %>
