--- a/app/assets/stylesheets/ads.scss
+++ b/app/assets/stylesheets/ads.scss
@@ -95,6 +95,16 @@ body{
     text-align: center;
 }
 
+.placesearch {
+  width: 200px !important;
+  float:left;
+}
+
+.categoriesearch {
+  width: 200px !important;
+  float: left;
+}
+
 .filter-sidebar {
   border: 1px solid #eaeaea;
 }
