review name added

--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,4 +1,5 @@
 <div class="review-rating" data-score="<%= review.rating %>"></div>
+<%= review.user.first_name %> <%= review.user.last_name %> zegt:
 <p><%= review.comment%></p>
 
 
