--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -10,7 +10,8 @@
 
           <%= f.select(:categorie_cont, options_for_select([['Kies je vervoersmiddel'],['Aanhanger'], ['Auto']]), {}, {class: "form-control categoriesearch"}) %>
         </div>
-        <%= f.submit "zoeken", :class => "btn btn-primary" %>
+
+        <%= f.submit "zoeken", :class => " btn-search" %>
       <% end %>
   </div>
 </div>
@@ -69,13 +70,19 @@
   <div class="ads">
     <% @ads.each do |ad| %>
       <div class="col-xs-6 col-sm-3 ad">
-          <h2><%= link_to ad.title, ad_path(ad) %></h2>
+          <h3><%= link_to ad.title, ad_path(ad) %></h3>
           <p> <%= ad.description %></p>
           <p> <%= ad.location %></p>
-
-          <%= link_to "Vervoer bekijken", ad_path(ad), class: "btn btn-warning" %>
       </div>
     <% end %>
   </div>
 
 </div>
+
+<script>
+  $(function() {
+    $( "#datepicker" ).datepicker();
+  });
+
+
+  </script>
