--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -27,3 +27,32 @@
 .footer ul li {
   list-style: none;
 }
+
+
+input#q_location_cont {
+    border: 1px solid grey;
+    border-radius: 0px;
+    height: 40px;
+    width: 267px !important;
+}
+
+select#q_categorie_cont {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-position: right 50%;
+    background-repeat: no-repeat;
+    background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAA4AAAAMCAYAAABSgIzaAAAAGXRFW…zTk0D/M+KzkRGPoQSdykiKJrBGpOhgJFYTWNEIiEeAAAMAzNENEOH+do8AAAAASUVORK5CYII=);
+    padding: .5em;
+    padding-right: 1.5em;
+    border-radius: 0px;
+    border: 1px solid grey;
+    height: 40px;
+    width: 250px !important;
+}
+
+input.btn.btn-primary {
+    height: 40px;
+    width: 150px;
+    border-radius: 0px;
+    background-color: #5dcbee;
+}
