Search bar CSS / Add styling search page
Search bar CSS / Add styling search page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -56,3 +56,41 @@ input.btn.btn-primary {
     border-radius: 0px;
     background-color: #5dcbee;
 }
+
+
+.field {
+    margin-top: 154px;
+}
+
+.header > h1 {
+    font-family: helvetica;
+    font-size: 30px;
+    font-weight: 500;
+}
+
+.header > h3 {
+    font-family: helvetica;
+    font-size: 24px;
+    font-weight: 200;
+}
+
+.col-xs-6.col-sm-3.ad {
+    height:auto;
+}
+
+.ad > img {
+    width: 100%;
+    height: auto;
+    margin-top: 11px;
+}
+
+.col-md-3.filter-sidebar {
+    height: 700px;
+}
+.ad > h4 {
+    font-size: 15px;
+}
+
+.ad > p {
+    margin: 0px;
+}
